--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ ipython-genutils==0.2.0
 isoduration==20.11.0
 jedi==0.18.2
 Jinja2==3.1.2
+joblib==1.2.0
 jsonpointer==2.3
 jsonschema==4.17.3
 jupyter-events==0.5.0
@@ -71,6 +72,8 @@ PyYAML==6.0
 pyzmq==24.0.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+scikit-learn==1.2.0
+scipy==1.9.3
 seaborn==0.12.1
 Send2Trash==1.8.0
 six==1.16.0
@@ -78,6 +81,7 @@ sniffio==1.3.0
 soupsieve==2.3.2.post1
 stack-data==0.6.2
 terminado==0.17.1
+threadpoolctl==3.1.0
 tinycss2==1.2.1
 tornado==6.2
 traitlets==5.7.1
