--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,13 @@ debugpy==1.6.4
 decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
+exceptiongroup==1.1.0
 executing==1.2.0
 fastjsonschema==2.16.2
 fonttools==4.38.0
 fqdn==1.5.1
 idna==3.4
+iniconfig==2.0.0
 ipykernel==6.19.2
 ipython==8.7.0
 ipython-genutils==0.2.0
@@ -56,6 +58,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.3.0
 platformdirs==2.6.0
+pluggy==1.0.0
 prometheus-client==0.15.0
 prompt-toolkit==3.0.36
 psutil==5.9.4
@@ -65,6 +68,7 @@ pycparser==2.21
 Pygments==2.13.0
 pyparsing==3.0.9
 pyrsistent==0.19.2
+pytest==7.2.1
 python-dateutil==2.8.2
 python-json-logger==2.0.4
 pytz==2022.6
@@ -83,6 +87,7 @@ stack-data==0.6.2
 terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
+tomli==2.0.1
 tornado==6.2
 traitlets==5.7.1
 uri-template==1.2.0
